samples/errors/type_error_add.lox
// Cannot add different types
print "hello" + 1; // expect runtime error: Operands must be two numbers or two strings.
